--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!doctype html>
 <html>
 <head>
+<title>Flowers</title>
 
 </head>
 <body>
+<h1>My Favorite Flowers </h1>
+
+<p>This is a paragraph. </p>
+
+<ol>
+<li>first</li>
+<li>second</li>
+<li>third</li>
+</ol>
 
 </body>
 </html>
+
+
