--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!doctype html>
 <html>
 <head>
-<title>Flowers</title>
-
+<title>Travel</title>
+<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<h1>My Favorite Flowers </h1>
+<h1>My favorite places to travel </h1>
+<h3>By Pia Martin </h3>
 
-<p>This is a paragraph. </p>
+<center><img id="airplanepic" src="airplane.jpg" alt="airplane" /></center>
 
 <ol>
-<li>first</li>
-<li>second</li>
-<li>third</li>
+
+<li><a href="saintBarths.html">Saint Barths</a></li>
+<li><a href="tellurideFun.html">Telluride</a></li>
+<li><a href="hawaiiFun.html">Hawaii</a></li>
+<li><a href="glenbrookFun.html">Glenbrook</a></li>
+
 </ol>
+
 
 </body>
 </html>
+
 
 
